test/e2e/chainsaw/hybridgateway/basic-tcproute/01-tcpRoute-echo.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: TCPRoute
metadata:
  name: ($tcp_route_name)
  namespace: ($tcp_route_namespace)
  labels:
    chainsaw/test: ($test_name)
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ($gateway_name)
  rules:
    - backendRefs:
        - name: ($echo_deployment_name)
          port: 1025
