test/e2e/chainsaw/hybridgateway/basic-tcproute/03-assert-kong-resources.yaml
---
apiVersion: configuration.konghq.com/v1alpha1
kind: KongRoute
metadata:
  namespace: ($namespace)
  (labels."gateway-operator.konghq.com/managed-by" == 'TCPRoute'): true
  (annotations."gateway-operator.konghq.com/hybrid-routes-TCPRoute" | contains(@, join('/', [($tcp_route_namespace), ($tcp_route_name)]))): true
  (annotations."gateway-operator.konghq.com/hybrid-gateways" == join('/', [($gateway_namespace), ($gateway_name)])): true
spec:
  protocols:
    - tcp
  destinations:
    - port: (to_number($listener_tcp_port))
  (serviceRef.namespacedRef.name != null): true
status:
  (conditions[?type == 'Programmed']):
    - status: 'True'
      reason: Programmed
  (conditions[?type == 'KongServiceRefValid']):
    - status: 'True'
      reason: Valid
  (conditions[?type == 'APIAuthResolvedRef']):
    - status: 'True'
      reason: ResolvedRef
  (conditions[?type == 'APIAuthValid']):
    - status: 'True'
      reason: Valid
  (konnect.controlPlaneID != null): true
  (konnect.id != null): true
  (konnect.serviceID != null): true
---
apiVersion: configuration.konghq.com/v1alpha1
kind: KongService
metadata:
  namespace: ($namespace)
  (labels."gateway-operator.konghq.com/managed-by" == 'TCPRoute'): true
  (annotations."gateway-operator.konghq.com/hybrid-routes-TCPRoute" | contains(@, join('/', [($tcp_route_namespace), ($tcp_route_name)]))): true
  (annotations."gateway-operator.konghq.com/hybrid-gateways" == join('/', [($gateway_namespace), ($gateway_name)])): true
spec:
  protocol: tcp
  (host != null): true
  controlPlaneRef:
    type: konnectNamespacedRef
status:
  (conditions[?type == 'Programmed']):
    - status: 'True'
      reason: Programmed
  (conditions[?type == 'ControlPlaneRefValid']):
    - status: 'True'
      reason: Valid
  (conditions[?type == 'APIAuthResolvedRef']):
    - status: 'True'
      reason: ResolvedRef
  (conditions[?type == 'APIAuthValid']):
    - status: 'True'
      reason: Valid
  (konnect.controlPlaneID != null): true
  (konnect.id != null): true
---
apiVersion: configuration.konghq.com/v1alpha1
kind: KongUpstream
metadata:
  namespace: ($namespace)
  (labels."gateway-operator.konghq.com/managed-by" == 'TCPRoute'): true
  (annotations."gateway-operator.konghq.com/hybrid-routes-TCPRoute" | contains(@, join('/', [($tcp_route_namespace), ($tcp_route_name)]))): true
  (annotations."gateway-operator.konghq.com/hybrid-gateways" == join('/', [($gateway_namespace), ($gateway_name)])): true
status:
  (conditions[?type == 'Programmed']):
    - status: 'True'
      reason: Programmed
  (conditions[?type == 'ControlPlaneRefValid']):
    - status: 'True'
      reason: Valid
  (conditions[?type == 'APIAuthResolvedRef']):
    - status: 'True'
      reason: ResolvedRef
  (conditions[?type == 'APIAuthValid']):
    - status: 'True'
      reason: Valid
  (konnect.controlPlaneID != null): true
  (konnect.id != null): true
---
apiVersion: configuration.konghq.com/v1alpha1
kind: KongTarget
metadata:
  namespace: ($namespace)
  (labels."gateway-operator.konghq.com/managed-by" == 'TCPRoute'): true
  (annotations."gateway-operator.konghq.com/hybrid-routes-TCPRoute" | contains(@, join('/', [($tcp_route_namespace), ($tcp_route_name)]))): true
  (annotations."gateway-operator.konghq.com/hybrid-gateways" == join('/', [($gateway_namespace), ($gateway_name)])): true
spec:
  (target != null): true
  (upstreamRef.name != null): true
status:
  (conditions[?type == 'Programmed']):
    - status: 'True'
      reason: Programmed
  (conditions[?type == 'KongUpstreamRefValid']):
    - status: 'True'
      reason: Valid
  (conditions[?type == 'ControlPlaneRefValid']):
    - status: 'True'
      reason: Valid
  (conditions[?type == 'APIAuthResolvedRef']):
    - status: 'True'
      reason: ResolvedRef
  (conditions[?type == 'APIAuthValid']):
    - status: 'True'
      reason: Valid
  (konnect.controlPlaneID != null): true
  (konnect.id != null): true
  (konnect.upstreamID != null): true
